2.3
-Added "Quick Remove DD" feature
-Added "Remove High Density Statuses" option
-Fixed a minor bug with crowd event placement checking
-Fixed the tab order in the configuration window
-Fixed a null reference exception in the chord slide handshape length fix
-Fixed an off-by-one error in the FIXOPEN chord processor
-Fixed a false positive in the bend value mismatch check
-Bring the main window to the front when closing a child window (WPF version)
-Small improvements to the Avalonia UI
-Updated Avalonia to 0.9.9
-Updated .NET Core version to 3.1 (WPF version)

2.2
-Added 'so' slideout custom event
-Added linknext chord slide handshape length correction
-Added anchor placeholder note removing
-Added checking for need to reset arrangement ids
-Added XML check for unpitched slide notes with linknext
-Updated Avalonia to 0.8.3
-Migrated the WPF version to run on .NET Core 3

2.1
-Added 'overwrite original file' option
-Anchor position chord fingering uses handshapes and produces less false positives
-Moved unnecessary NG phrase deletion before one level fix
-Added crowd event correction (E0 -> e0 etc)
-Added anchor placement checking
-Updated to DDC 3.6
-Removed first phrase/beat moving workarounds
-Updated Avalonia to 0.7.0 and changed to dotnetcoreapp2.1
-Reverted back to Avalonia 0.6.1
-Changed config implementation
-Added Ctrl+P and F5 shortcuts for 'Process'
-Added shortcut keys to Avalonia version
-Fixed a bug in FixEOFLinkNextChordTechNoteIssue function
-Fixed a bug in intro applause event insertion

2.0
-Accept files with XML file extension in capitals
-Fixed bug in DDC generated muted note detection
-Fixed bug in RemoveUnnecessaryNGPhrase, adjust NLD phrase id numbers (Fixed bug that could cause wrong NLD phrase ids in certain circumstances if "Keep END phrase location" is enabled and DDC has moved the END phrase)
-Can remove selected files with delete key
-Clear log text when starting processing
-Changed ShouldDisplayProcessingMessages into a Subject