@@ -1,6 +1,7 @@
 2.3
 -Added "Quick Remove DD" feature
 -Added "Remove High Density Statuses" option
+-Added "Open Containing Folder" context menu item
 -Fixed a minor bug with crowd event placement checking
 -Fixed the tab order in the configuration window
 -Fixed a null reference exception in the chord slide handshape length fix
